src/test/ui/closures/issue-90871.stderr
error[E0412]: cannot find type `n` in this scope
  --> $DIR/issue-90871.rs:2:8
   |
LL |     2: n([u8; || 1])
   |        ^ expecting a type here because of type ascription

error[E0308]: mismatched types
  --> $DIR/issue-90871.rs:2:15
   |
LL |     2: n([u8; || 1])
   |               ^^^^ expected `usize`, found closure
   |
   = note: expected type `usize`
           found closure `[closure@$DIR/issue-90871.rs:2:15: 2:17]`
help: use parentheses to call this closure
   |
LL |     2: n([u8; (|| 1)()])
   |               +    +++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
