src/test/ui/closures/issue-90871.rs
fn main() {
    2: n([u8; || 1])
    //~^ ERROR cannot find type `n` in this scope
    //~| ERROR mismatched types
}
